# direnv-poetry-test

./: README.md  pyproject.toml
direnv_poetry_test/: main.py
